examples/neg/issue369-multiple.effekt
interface Eff {
  def op(): Int
}

def e: Eff = new Eff {
  def op() = println("42"); 42
  def foo() = 42
}
